<resources>
    <string name="app_name">FuFuFu</string>

    <string name="host_players">親子</string>
    <string name="host">親</string>
    <string name="players">子</string>

    <string name="wintype">ツモロン</string>
    <string name="wintype_pick">ツモ</string>
    <string name="wintype_win">ロン</string>

    <string name="hansu">飜数</string>
    <string name="han">飜</string>

    <string name="yaku">役</string>
    <string name="pinfu">平和</string>
    <string name="titoi">七対子</string>

    <string name="wait">待ち</string>
    <string name="ryansyan">両面・シャンポン</string>

    <string name="suhai">2~8までの数牌</string>
    <string name="zihai">19字牌</string>
    <string name="minko">明刻</string>
    <string name="anko">暗刻</string>
    <string name="minkan">明槓</string>
    <string name="ankan">暗槓</string>
    <string name="quantity">個</string>

    <string name="janto">雀頭</string>
    <string name="janto_zikazebakaze">自風/場風</string>
    <string name="janto_yakuhai">役牌</string>
    <string name="janto_others">その他</string>

    <string name="others">その他</string>
    <string name="calc">計算</string>
    <string name="reset">リセット</string>

</resources>