<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarSize="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

<!--                親子-->
                <RadioGroup
                    android:id="@+id/parentChild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@id/parentChild_child">

                    <RadioButton
                        android:id="@+id/parentChild_parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/host"/>

                    <RadioButton
                        android:id="@+id/parentChild_child"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/players"/>

                </RadioGroup>

<!--                ロンツモ-->
                <RadioGroup
                    android:id="@+id/win"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@id/win_pick">

                    <RadioButton
                        android:id="@+id/win_pick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pick"/>

                    <RadioButton
                        android:id="@+id/win_win"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/win"/>

                </RadioGroup>

<!--                飜数-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <NumberPicker
                        android:id="@+id/han_numpick"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/han"/>

                </LinearLayout>

<!--                上がり方-->
                <RadioGroup
                    android:id="@+id/yaku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/yaku_others"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/yaku_pinfu"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/pinfu"/>

                    <RadioButton
                        android:id="@+id/yaku_titoi"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/titoi"/>

                    <RadioButton
                        android:id="@+id/yaku_others"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/others"/>

                </RadioGroup>

<!--                2~8-->
                <LinearLayout
                    android:id="@+id/suhai_mentsu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/suhai_mentus_minko"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minko"/>

                        <NumberPicker
                            android:id="@+id/suhai_mentsu_minko_numpick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quantity"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/suhai_mentus_anko"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/anko"/>

                        <NumberPicker
                            android:id="@+id/suhai_mentsu_anko_numpick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quantity"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/suhai_mentus_minkan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minkan"/>

                        <NumberPicker
                            android:id="@+id/suhai_mentsu_minkan_numpick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quantity"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/suhai_mentus_ankan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ankan"/>

                        <NumberPicker
                            android:id="@+id/suhai_mentsu_ankan_numpick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quantity"/>

                    </LinearLayout>

                </LinearLayout>


<!--                19字牌-->
                <LinearLayout
                    android:id="@+id/zihai_mentsu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/zihai_mentus_minko"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minko"/>

                        <NumberPicker
                            android:id="@+id/zihai_mentsu_minko_numpick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quantity"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/zihai_mentus_anko"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/anko"/>

                        <NumberPicker
                            android:id="@+id/zihai_mentsu_anko_numpick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quantity"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/zihai_mentus_minkan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minkan"/>

                        <NumberPicker
                            android:id="@+id/zihai_mentsu_minkan_numpick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quantity"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/zihai_mentus_ankan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ankan"/>

                        <NumberPicker
                            android:id="@+id/zihai_mentsu_ankan_numpick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quantity"/>

                    </LinearLayout>

                </LinearLayout>

<!--                待ち-->
                <RadioGroup
                    android:id="@+id/wait"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@id/wait_ryansyan">

                    <RadioButton
                        android:id="@+id/wait_ryansyan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ryansyan"/>

                    <RadioButton
                        android:id="@+id/wait_others"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/others"/>

                </RadioGroup>

<!--                雀頭-->
                <RadioGroup
                    android:id="@+id/janto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@id/janto_others">

                    <RadioButton
                        android:id="@+id/janto_zikazebakaze"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/janto_zikazebakaze"/>

                    <RadioButton
                        android:id="@+id/janto_yakuhai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/janto_yakuhai"/>

                    <RadioButton
                        android:id="@+id/janto_others"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/janto_others"/>

                </RadioGroup>

<!--                その他-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/calc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoSizeTextType="uniform"
                        android:text="@string/calc"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:autoSizeTextType="uniform"
                        android:text="@string/reset"/>

                </LinearLayout>

<!--            計算結果-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoSizeTextType="uniform"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>